vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSessionParticipa_v2__c/SDO_Analytics_AIAgentSessionParticipa_v2__c.object-meta.xml
<CustomObject>
    <label>AIAgentSessionParticipant</label>
    <nameField>
        <label>AIAgentSessionParticipant</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIAgentSessionParticipants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>