vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSessionParticipa_v2__c/fields/AI_Agent_Session_Participant_Role__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Session_Participant_Role__c</fullName>
    <label>AI Agent Session Participant Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>