vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSessionParticipa_v2__c/fields/AI_Agent_Version_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Version_Api_Name__c</fullName>
    <label>AI Agent Version Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>