vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSessionParticipa_v2__c/fields/End_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>End_Timestamp__c</fullName>
    <label>End Timestamp</label>
    <type>DateTime</type>
</CustomField>