vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSessionParticipa_v2__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <label>Individual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>