vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSessionParticipa_v2__c/fields/Participant_Object__c.field-meta.xml
<CustomField>
    <fullName>Participant_Object__c</fullName>
    <label>Participant Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>