vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSessionParticipa_v2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AI_Agent_Api_Name__c</columns>
    <columns>AI_Agent_Session__c</columns>
    <columns>AI_Agent_Session_Participant_Role__c</columns>
    <columns>AI_Agent_Template_Api_Name__c</columns>
    <columns>AI_Agent_Type__c</columns>
    <columns>AI_Agent_Version_Api_Name__c</columns>
    <columns>End_Timestamp__c</columns>
    <columns>Individual__c</columns>
    <columns>Participant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>